# tzgj-attack

./: .gitignore  README.md
roborts_decision/: CMakeLists.txt  behavior_test.cpp  test.py  tree_test.cpp
roborts_decision/behavior_tree/: behavior_node.h
roborts_decision/blackboard/: blackboard.h
roborts_decision/config/: decision.prototxt
roborts_decision/example_behavior/: aim_behavior.h  back_boot_area_behavior.h  circle_behavior.h  dance_behavior.h  gimbal_aim_behavior.h  gimbalget0_behavior.h  gogoal_behavior.h  patrol_behavior.h  shake_behavior.h  wait_behavior.h
roborts_decision/executor/: chassis_executor.cpp  gimbal_executor.cpp
roborts_decision/proto/: decision.pb.cc  decision.pb.h  decision.proto
tjsp_attack_2020/: CMakeLists.txt  armor_attack.cpp  config.toml  happyModel.pb  main.cpp  package.xml
tjsp_attack_2020/Model/: happyModel.pb
tjsp_attack_2020/data/: MindVision.Config  camAuto.xml  camera6mm.xml  camera8mm.xml
tjsp_attack_2020/include/: crc_table.hpp  imageshow.hpp  semaphore.hpp  toml.h  utility.hpp  video.hpp
tjsp_attack_2020/include/usbio/include/: usbio.hpp
tjsp_attack_2020/include/usbio/src/: usbio.cpp  utility.cpp
tjsp_attack_2020/info/: dumpe2.nnet
tjsp_attack_2020/launch/: attack.launch
tjsp_attack_2020/scripts/: img_server.py  test.py
tjsp_attack_2020/source/: README.md  ThreadPool.h  attack.hpp  base.hpp  capture.hpp  communicator.hpp  layers.hpp  tools.hpp
tjsp_attack_2020/source/windmill/: Target.hpp  Tool.hpp  Windmill.hpp  Windmill.hpp.bk0802  Windmill_org.hpp
tjsp_attack_2020/srv/: img.srv
tjsp_attack_2020/tools/: calibration.cpp  camera.cpp  communicator.cpp  pack.py  train.cpp
tjsp_attack_2020/tools/Camera/log/: error_20190719-210401.2701  error_20190719-210402.2713  error_20190719-210404.2725  error_20190719-210405.2737  error_20190719-210406.2749  error_20190719-210408.2762  error_20190719-210409.2774  error_20190719-210411.2811  error_20190719-210412.2823  error_20190719-210413.2835  error_20190719-210415.2847  error_20190719-210416.2861
zyc/: center_new.py  predict_ros_new.py
