<?xml version="1.0"?>
<package>
  <name>tjsp_attack_2020</name>
  <version> 0.0.1 </version>
  <description>
   test
  </description>
  <license> TODO </license>
  
  <maintainer email="ktony@todo.todo">ktony</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>apriltag</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>image_geometry</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>libopencv-dev</build_depend>
  <build_depend>cmake_modules</build_depend>
  
  <run_depend>tf</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>image_geometry</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>libopencv-dev</run_depend>

</package>
